# pyUE4Parse

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
UE4Parse/: BinaryReader.py  Globals.py  Logger.py  Oodle.py  PackageReader.py  ToJson.py  UClass.py  __init__.py
UE4Parse/Assets/: PackageReader.py  ToJson.py
UE4Parse/Class/: ExportRegistry.py  Level.py  MaterialInstanceConstant.py  UClass.py  UObjects.py  UStaticMesh.py  UStringTable.py  UTexture2D.py  World.py
UE4Parse/Encryption/: FAESKey.py  __init__.py
UE4Parse/Exceptions/: Exceptions.py  __init__.py
UE4Parse/Extras/: FBKP.py  __init__.py
UE4Parse/IO/: IoStoreReader.py  __init__.py
UE4Parse/IoObjects/: EIoChunkType.py  FContainerHeader.py  FExportBundle.py  FExportMapEntry.py  FImportedPackage.py  FIoGlobalData.py  FIterator.py  FMappedName.py  FMinimalName.py  FNameEntryId.py  FPackageObjectIndex.py  FPackageSummary.py  FScriptObjectDesc.py  FScriptObjectEntry.py  FUnversionedHeader.py  IoUtils.py
UE4Parse/Localization/: FTextLocalizationResource.py  FTextLocalizationResourceVersion.py
UE4Parse/Objects/: Decompress.py  EObjectFlags.py  EPackageFlags.py  EPixelFormat.py  EReleaseObjectVersion.py  ETextFlag.py  EUEVersion.py  EUEVersions.py  EUnrealEngineObjectUE4Version.py  FByteBulkData.py  FCompressedChunk.py  FCustomVersion.py  FCustomVersionContainer.py  FEngineVersion.py  FGenerationInfo.py  FGuid.py  FLevelSequenceLegacyObjectReference.py  FName.py  FNameEntrySerialized.py  FObjectExport.py  FObjectImport.py  FPackageFileSummary.py  FPackageIndex.py  FPropertyTag.py  FStripDataFlags.py  FText.py  FUniqueObjectGuid.py  URL.py
UE4Parse/PakFile/: PakReader.py  __init__.py
UE4Parse/PropertyTagData/: ArrayProperty.py  BaseProperty.py  BoolProperty.py  ByteProperty.py  DelegateProperty.py  DoubleProperty.py  EnumProperty.py  LazyObjectProperty.py  (+7 more)
(+202 files in other folders)
