[project]
name = "UE4Parse"
description = "ue4/5 asset parser"
authors = [{ name = "Minshu Gurjar" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
keywords = ["UE4", "UE5", "Unreal Engine"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    'License :: OSI Approved :: MIT License',
]
dependencies = ["pycryptodome", "lz4", "pyUsmap", "pillow"]

[project.optional-dependencies]
tex = ["quicktex", "astc_decomp_faster"]

[project.urls]
homepage = "https://github.com/MinshuG/pyUE4Parse"
repository = "https://github.com/MinshuG/pyUE4Parse"

[build-system]
requires = ["setuptools~=69.5.1", "Cython~=3.0.10"]
build-backend = "setuptools.build_meta"
